--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,5 @@
-[package]
-name = "videre"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-# opencv = "0.93.0"
-image = "0.25.2"
-# ndarray = "0.16.1"
+[workspace]
+members = [
+    "videre",
+    "vid_src", "videre_gui",
+]
